fix <ul> alignment

--- a/app/components/RichText/index.module.css
+++ b/app/components/RichText/index.module.css
@@ -1,3 +1,15 @@
+.container ul {
+    max-width: calc(100vw - 2 * var(--page-margin));
+    text-align: left;
+}
+@media screen and (min-width: 768px) {
+    .container ul {
+      max-width: min(70vw, 1100px);
+      margin-left: auto;
+      margin-right: auto;
+    }
+}
+
 .imageWrapper {
     width: 100%;
 }
